--- a/css/style.css
+++ b/css/style.css
@@ -47,8 +47,8 @@ main > section:nth-child(2n){
     width: calc((100% / 5) * 3);
 }
 
-.col-1-3 {
-    width: calc((100% / 3) * 1);
+.col-3-4 {
+    width: calc((100% / 4) * 3);
 }
 
 .col-1-4 {
@@ -269,6 +269,47 @@ footer {
     padding: 30px 0;
 }
 
+.footer-top-row {
+    min-height: 400px;
+    padding-top: 40px;
+}
+
+.footer-top-row:first-child h4 {
+    color: #7289DA;
+    font-size: 28px;
+    padding-top: 20px;
+}
+
+.footer-top-row:first-child div {
+    color: white;
+    align-items: center;
+}
+
+.footer-top-row:first-child div img {
+    width: 30px;
+}
+
+.footer-top-row .footer-menu ul {
+    list-style: none;
+}
+
+.footer-top-row .footer-menu ul:first-child {
+    color: #7289DA;
+    line-height: 2.5em;
+    font-weight: 600;
+}
+
+.footer-top-row .footer-menu ul li a {
+    text-decoration: none;
+    color: white;
+    line-height: 2.5em;
+    font-weight: 200;
+}
+
+.footer-top-row .footer-small-row > *{
+    min-height: 400px;
+}
+
 .footer-bottom {
     padding: 20px 0;
 }
@@ -279,24 +320,6 @@ footer {
 }
 
 /*   DEBUG   */
-
-.debug .footer-top-row {
-    background-color: #F08080;
-    min-height: 500px;
-}
-
-.debug .footer-top-row > * {
-    border: 1px dashed black;
-}
-
-.debug .footer-top-row .footer-small-row {
-    background-color: #20B2AA;
-}
-
-.debug .footer-top-row .footer-small-row > *{
-    border: 1px dashed white;
-    min-height: 500px;
-}
 
 .debug .footer-bottom-row {
     height: 60px;
